tests/errors/preprocessor/012_branch.c.expect
./tests/errors/preprocessor/012_branch.c:1:7: error: unexpected end-of-file in preprocessor expression
1 | #ifndef
          ^
./tests/errors/preprocessor/012_branch.c:1:7: error: unterminated #ifndef
1 | #ifndef
          ^
